kubernetes/certificate/devopsrn-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: devopsrn-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`devopsrn.com.br`)
      kind: Rule
      services:
        - name: varnish-svc
          port: 80
